--- a/style.css
+++ b/style.css
@@ -80,24 +80,29 @@ main {
 }
 
 .clase h1 {
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     font-size: 23px;
+    transition: all .5s
 }
 
 .line{
     width: 100%;
-    background: black;
+    background: white;
     margin: 0 auto;
     height: 1.5px;
     margin-bottom: 40px;
+    transition: all .5s
 }
 
 .clase p {
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     font-size: 30px;
     line-height: 60px;
+    transition: all .5s
 }
 
 /* enlaces */
@@ -204,6 +209,18 @@ body.white{
 
 .clase.white{
     box-shadow: 1px 1px 20px black;
+}
+
+.clase.white p{
+    color: black;
+}
+
+.clase.white h1{
+    color: black;
+}
+
+.line.white{
+    background: black;
 }
 
 .clase.white:hover{
