--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@ body {
     border: 2px solid white;
 
     cursor: pointer;
+
+    transition: all .5s;
 }
 
 main {
@@ -64,8 +66,7 @@ main {
     height: 200px;
     padding: 40px 30px 90px 40px;
 
-    background: grey;
-    border: 5px solid rgb(90, 90, 90);
+    border: 5px solid #adadad;
     border-radius: 10%;
 
     box-shadow: 1px 1px 20px grey;
@@ -138,6 +139,15 @@ main {
     transition: all .5s;
 }
 
+#icon1:hover{
+    color: rgb(78, 77, 77);
+}
+
+#icon2:hover{
+    color: cornflowerblue;
+}
+
+
 .social-media-icon i{
     font-size: 30px;
     line-height: 60px;
@@ -209,6 +219,8 @@ body.white{
 
 .clase.white{
     box-shadow: 1px 1px 20px black;
+    background-color: gray;
+    border-color: black;
 }
 
 .clase.white p{
